# fun-Blatt01

./: Blatt01.cabal  README.txt
benchmark/: Bench.hs
executable/: .Main.hs.swp  Main.hs
test-suite/: FooSpec.hs  HLint.hs  Haddock.hs
