name:           Blatt01
version:        0.0.0
build-type:     Simple
cabal-version:  >= 1.18
copyright:      2015 Oliver Braun
license:        BSD3
synopsis:       An example package.
description:    Package for the fp lecture at hm.edu
category:       Misc
maintainer:     ob@cs.hm.edu

library
    default-language:   Haskell2010
    exposed-modules:    Foo
    hs-source-dirs:     library
    build-depends:      base
