name:           Blatt01
version:        0.0.0
build-type:     Simple
cabal-version:  >= 1.18
copyright:      2015 Oliver Braun
license:        BSD3
synopsis:       An example package.
description:    Package for the fp lecture at hm.edu
category:       Misc
maintainer:     ob@cs.hm.edu

flag documentation
    default: False

library
    default-language:   Haskell2010
    exposed-modules:    Foo
    hs-source-dirs:     library
    build-depends:      base
    if flag(documentation)
        build-depends:  hscolour == 1.20.*

executable foo
    build-depends:      base, Blatt01
    default-language:   Haskell2010
    hs-source-dirs:     executable
    main-is:            Main.hs

test-suite hspec
    build-depends:      base, Blatt01, hspec, QuickCheck
    default-language:   Haskell2010
    hs-source-dirs:     test-suite
    main-is:            Spec.hs
    type:               exitcode-stdio-1.0

test-suite doctest
    build-depends: base, doctest == 0.9.*, Glob == 0.7.*
    default-language: Haskell2010
    hs-source-dirs: test-suite
    main-is: DocTest.hs
    type: exitcode-stdio-1.0

benchmark criterion
    build-depends:      base, Blatt01, criterion
    default-language:   Haskell2010
    hs-source-dirs:     benchmark
    main-is:            Bench.hs
    type:               exitcode-stdio-1.0
