name:           Blatt01
version:        0.0.0
build-type:     Simple
cabal-version:  >= 1.18
copyright:      2015 Oliver Braun
license:        BSD3
synopsis:       An example package.
description:    Package for the fp lecture at hm.edu
category:       Misc
maintainer:     ob@cs.hm.edu

flag documentation
    default: False

library
    default-language:   Haskell2010
    exposed-modules:    Foo
    hs-source-dirs:     library
    build-depends:      base
    if flag(documentation)
        build-depends:  hscolour

executable foo
    build-depends:      base, Blatt01
    default-language:   Haskell2010
    hs-source-dirs:     executable
    main-is:            Main.hs

test-suite hspec
    build-depends:      base, Blatt01, hspec, QuickCheck
    default-language:   Haskell2010
    ghc-options:        -O0 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
                        -fno-warn-unused-do-bind
    hs-source-dirs:     test-suite library
    other-modules:      Foo, FooSpec
    main-is:            Spec.hs
    type:               exitcode-stdio-1.0

test-suite doctest
    build-depends: base, doctest, Glob
    default-language: Haskell2010
    hs-source-dirs: test-suite
    main-is: DocTest.hs
    type: exitcode-stdio-1.0

test-suite haddock
    build-depends:    base, process, regex-compat
    default-language: Haskell2010
    hs-source-dirs:   test-suite
    main-is:          Haddock.hs
    type:             exitcode-stdio-1.0

benchmark criterion
    build-depends:      base, Blatt01, criterion
    default-language:   Haskell2010
    hs-source-dirs:     benchmark
    main-is:            Bench.hs
    type:               exitcode-stdio-1.0
